# snake

./: Cargo.toml
src/: fruit.rs  game.rs  main.rs  snake.rs
